feat(fs-witrack): add learn